--- a/buildspec.yml
+++ b/buildspec.yml
@@ -7,9 +7,9 @@ phases:
       - aws --version
       #- $(aws ecr get-login --region ap-south-1 --no-include-email)
       # update below 
-      - aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin 279555700118.dkr.ecr.us-east-1.amazonaws.com
+      - aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin 871594846667.dkr.ecr.us-east-1.amazonaws.com
       - # Replace with this to your repository URI
-      - REPOSITORY_URI=279555700118.dkr.ecr.us-east-1.amazonaws.com/myrepo
+      - REPOSITORY_URI=871594846667.dkr.ecr.us-east-1.amazonaws.com/aws-micro-springboot-dep
       - IMAGE_TAG=build-$(echo $CODEBUILD_BUILD_ID | awk -F":" '{print $2}')
   build:
     commands:
