--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,37 +1,34 @@
 version: 0.2
+
 phases:
   pre_build:
     commands:
-      - echo Logging in to Amazon ECR....
-      #checking version
+      - echo Logging in to Amazon ECR...
       - aws --version
-      #- $(aws ecr get-login --region ap-south-1 --no-include-email)
-      # update below 
       - aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin 871594846667.dkr.ecr.us-east-1.amazonaws.com
-      - # Replace with this to your repository URI
       - REPOSITORY_URI=871594846667.dkr.ecr.us-east-1.amazonaws.com/aws-micro-springboot-dep
       - IMAGE_TAG=build-$(echo $CODEBUILD_BUILD_ID | awk -F":" '{print $2}')
+
   build:
     commands:
       - echo Build started on `date`
-      - echo building the Jar file
+      - echo Building the JAR
       - mvn clean install
       - echo Building the Docker image...
       - docker build -t $REPOSITORY_URI:latest .
       - docker tag $REPOSITORY_URI:latest $REPOSITORY_URI:$IMAGE_TAG
+
   post_build:
     commands:
       - echo Build completed on `date`
-      - echo pushing to repo
+      - echo Pushing images to ECR...
       - docker push $REPOSITORY_URI:latest
       - docker push $REPOSITORY_URI:$IMAGE_TAG
-      - echo Writing image definitions file...
-      # Give your container name
+      - echo Writing imagedefinitions.json
       - DOCKER_CONTAINER_NAME=spring-demo-ecr
       - printf '[{"name":"%s","imageUri":"%s"}]' $DOCKER_CONTAINER_NAME $REPOSITORY_URI:$IMAGE_TAG > imagedefinitions.json
-      - echo $DOCKER_CONTAINER_NAME
-      - echo printing imagedefinitions.json
       - cat imagedefinitions.json
+
 artifacts:
   files:
     - imagedefinitions.json
